# Computacao-Grafica

./: .stylelintrc  ReadMe.md  index.html  package-lock.json  package.json
pythonGC/: README.md  pyproject.toml  requirements.txt
pythonGC/pipelines/IntensityForBunny/: IntensityForBunny.frag  IntensityForBunny.vert
pythonGC/pipelines/SimplePipeline/: SimplePipeline.frag  SimplePipeline.vert
pythonGC/pipelines/SimpleTexture/: SimpleTexture.frag  SimpleTexture.vert
pythonGC/pipelines/WhiteDotsPipeline/: WhiteDotsPipeline.vert
pythonGC/pythonGC/: Cubos.py  Exemplo1.py  Exemplo2.py  Exemplo3.py  GL2Cubos.py  GL2Piramide.py  GL2UVsphere.py  GL2malha.py  GL3Dado.py  GL3StanfordBunny.py  GL3TexturedQuad.py  Gl2Prisma.py  Gl3Earth.py  Piramide.py  Prisma.py  UVsphere.py  basic.py  basicGL2.py  basicGL3.py  camera.py  colorstuff.py  malha.py  model_util.py  shader.py  texture.py
pythonGC/pythonGC/pipelines/: test.frag
pythonGC/pythonGC/pipelines/SimplePipeline/: SimplePipeline.vert
pythonGC/pythonGC/pipelines/SimpleTexture/: SimpleTexture.vert
pythonGC/pythonGC/pipelines/WhiteDotsPipeline/: WhiteDotsPipeline.frag  WhiteDotsPipeline.vert
src/scss/: style.scss  variables.scss
trabalhos/: 1.html  2.html  template.html
